CR-2008-11-06-0: Bugfix:     - do not send a "exit\n" when a connection is
                               not responding anymore
                             - enhanced CHECK_EXPECT_MATCH_MAX_BUFFER size
                             - reworked delete_temp_script_files() procedure
                             - reworked wait_for_remote_file() procedure
                 Review:     MD

MG-2008-11-06-0: Enhancem.:  - SI usecase can now run in run level week
                 Review:     RH

MD-2008-11-05-0: Bugfix:     - fixed upgrade test
                 Review:     JG

JG-2008-11-05-0: Bugfix:     Fixed a number of issues in testsuite setup with
                             BDB RPC server spooling.
                             Make shadowd_migrate test fail, if less than 2
                             shadow hosts are configured.
                 Review:     MD

TB-2008-11-04-0: Bugfix:     - operated add. clusters can no longer delete
                               files for the main TS -> one .testsuite_delete
                               file for each TS cluster
                 Enhancem.:  - a TS generated script returns now
                               _exit_status_:(91) in case of a trapped error
                 Review:     CR
 
MD-2008-11-04-0: Bugfix:     - checkin MD-2008-10-28-0 introduced a copy/paste 
                               tcl error.
 
RD-2008-11-03-0: Enhancem.:  - added new test per_job_consumables
                             - enhanced resource_reservation to cover per job
                               consumables
                 Review:     CR

RH-2008-11-03-0: Enhancem.:  o Hedeby: test for issue 585 and 586 added
                             o logging: New util method ts_log_heading added.
                               This method can be used to log logical execution
                               steps of a test.
                 Review:     TB

EB-2008-11-02-0: Enhancem.:  Additional test for jsc scripts